--- a/languageTranslator/style.css
+++ b/languageTranslator/style.css
@@ -177,12 +177,12 @@ select:focus {
 
 .c1 {
   top: 3vh;
-  right: 30vh;
+  right: 35vh;
 }
 
 .c2 {
-  top: 100vh;
-  left: 15vh;
+  top: 70vh;
+  left: 35vh;
 }
 
 .windowbtn {
@@ -257,8 +257,9 @@ select:focus {
     font-weight: 100;
   }
   .c1,
-.c2{
-  display:none;
+  .c2 {
+    display: none;
+  }
 }
 
 @media (max-width: 550px) {
